# rust_adventure

./: .gitignore
ch01/hello_world_cpp/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ch01/hello_world_cpp/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ch01/hello_world_cpp/source/: lib.cpp
ch01/hello_world_cpp/test/: CMakeLists.txt
ch01/hello_world_cpp/test/source/: hello_world_cpp_test.cpp
ch01/hello_world_java/: settings.gradle.kts
ch01/hello_world_java/app/: build.gradle.kts
ch02/dicey_temperatures_cpp/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ch02/dicey_temperatures_cpp/.github/workflows/: ci.yml
ch02/dicey_temperatures_cpp/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ch02/dicey_temperatures_cpp/source/: lib.cpp  main.cpp
ch02/dicey_temperatures_cpp/test/: CMakeLists.txt
ch02/dicey_temperatures_cpp/test/source/: dicey_temperatures_cpp_test.cpp
ch02/dicey_temperatures_java/: settings.gradle.kts
ch02/dicey_temperatures_java/app/: build.gradle.kts
ch02/dicey_temperatures_java/app/src/main/java/dicey_temperatures_java/: App.java
ch02/dicey_temperatures_java/app/src/test/java/dicey_temperatures_java/: AppTest.java
ch02/dicey_temperatures_rust/: Cargo.toml
ch02/dicey_temperatures_rust/src/: main.rs
ch02/type_inference_cpp/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ch02/type_inference_cpp/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ch02/type_inference_cpp/source/: lib.cpp  main.cpp
ch02/type_inference_cpp/test/: CMakeLists.txt
ch02/type_inference_cpp/test/source/: type_inference_cpp_test.cpp
ch02/type_inference_java/: settings.gradle.kts
ch02/type_inference_java/app/: build.gradle.kts
ch02/type_inference_java/app/src/main/java/type_inference_java/: App.java
ch02/type_inference_java/app/src/test/java/type_inference_java/: AppTest.java
ch02/type_inference_rust/: Cargo.toml
ch02/type_inference_rust/src/: main.rs
ch03/exps_in_let_statement_rust/: Cargo.toml
ch03/exps_in_let_statement_rust/src/: main.rs
ch04/mem_dealloc_verifi_for_string_rust/: Cargo.toml
ch04/mem_dealloc_verifi_for_string_rust/src/: main.rs
